@@ -1,40 +1,31 @@
 package com.fleetmanagement.vehicleservice.service;
 
+import com.fleetmanagement.vehicleservice.client.UserServiceClient;
+import com.fleetmanagement.vehicleservice.client.UserServiceClient.DriverValidationResponse;
+import com.fleetmanagement.vehicleservice.client.UserServiceClient.DriverAssignmentNotification;
 import com.fleetmanagement.vehicleservice.domain.entity.Vehicle;
 import com.fleetmanagement.vehicleservice.domain.entity.VehicleAssignment;
 import com.fleetmanagement.vehicleservice.domain.enums.AssignmentStatus;
 import com.fleetmanagement.vehicleservice.domain.enums.AssignmentType;
-import com.fleetmanagement.vehicleservice.dto.request.*;
-import com.fleetmanagement.vehicleservice.dto.response.*;
-import com.fleetmanagement.vehicleservice.exception.*;
+import com.fleetmanagement.vehicleservice.dto.request.AssignDriverRequest;
+import com.fleetmanagement.vehicleservice.dto.response.VehicleAssignmentResponse;
+import com.fleetmanagement.vehicleservice.exception.DriverNotAvailableException;
+import com.fleetmanagement.vehicleservice.exception.VehicleAssignmentConflictException;
+import com.fleetmanagement.vehicleservice.exception.VehicleNotFoundException;
 import com.fleetmanagement.vehicleservice.repository.VehicleAssignmentRepository;
 import com.fleetmanagement.vehicleservice.repository.VehicleRepository;
-import com.fleetmanagement.vehicleservice.service.integration.UserServiceClient;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.util.StringUtils;
-
-import jakarta.persistence.criteria.Predicate;
-import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.List;
+import java.util.UUID;
 
-/**
- * Vehicle Assignment Service
- *
- * Manages driver-vehicle assignments with conflict detection,
- * check-in/check-out functionality, and assignment history tracking.
- */
 @Service
 @Transactional
 public class VehicleAssignmentService {
@@ -44,416 +35,315 @@ public class VehicleAssignmentService {
     private final VehicleAssignmentRepository assignmentRepository;
     private final VehicleRepository vehicleRepository;
     private final UserServiceClient userServiceClient;
-    private final CacheService cacheService;
 
     @Autowired
     public VehicleAssignmentService(VehicleAssignmentRepository assignmentRepository,
                                     VehicleRepository vehicleRepository,
-                                    UserServiceClient userServiceClient,
-                                    CacheService cacheService) {
+                                    UserServiceClient userServiceClient) {
         this.assignmentRepository = assignmentRepository;
         this.vehicleRepository = vehicleRepository;
         this.userServiceClient = userServiceClient;
-        this.cacheService = cacheService;
     }
 
     /**
-     * Assign driver to vehicle
+     * Assign driver to vehicle with complete validation workflow
      */
+    @Transactional
+    @CacheEvict(value = {"assignments", "driverAssignments", "vehicleAssignments"}, allEntries = true)
     public VehicleAssignmentResponse assignDriverToVehicle(AssignDriverRequest request, UUID companyId, UUID assignedBy) {
-        logger.info("Assigning driver {} to vehicle {} for company: {}",
+        logger.info("Assigning driver {} to vehicle {} for company {}",
                 request.getDriverId(), request.getVehicleId(), companyId);
 
-        // Validate vehicle exists and is available
+        // 1. VALIDATE DRIVER AVAILABILITY
+        validateDriverAvailability(request.getDriverId(), companyId);
+
+        // 2. VALIDATE VEHICLE AVAILABILITY
+        validateVehicleAvailability(request.getVehicleId(), companyId);
+
+        // 3. CHECK FOR ASSIGNMENT CONFLICTS
+        validateAssignmentConflicts(request.getDriverId(), request.getVehicleId(),
+                request.getStartDate(), request.getEndDate());
+
+        // 4. GET VEHICLE DETAILS FOR NOTIFICATION
         Vehicle vehicle = vehicleRepository.findByIdAndCompanyId(request.getVehicleId(), companyId)
                 .orElseThrow(() -> new VehicleNotFoundException("Vehicle not found: " + request.getVehicleId()));
 
-        // Validate driver exists (call user service)
-        validateDriver(request.getDriverId(), companyId);
-
-        // Validate assignment dates
-        validateAssignmentDates(request.getStartDate(), request.getEndDate());
-
-        // Check for conflicts
-        AssignmentValidationResponse validation = validateAssignment(request, companyId, null);
-        if (!validation.isValid()) {
-            throw new AssignmentConflictException("Assignment conflicts detected", validation.getErrors());
-        }
-
-        // Terminate any existing active assignments for this vehicle
-        terminateExistingVehicleAssignments(request.getVehicleId(), companyId, assignedBy);
-
-        // Create new assignment
+        // 5. CREATE ASSIGNMENT
         VehicleAssignment assignment = VehicleAssignment.builder()
-                .vehicle(vehicle)
+                .vehicleId(request.getVehicleId())
                 .driverId(request.getDriverId())
                 .companyId(companyId)
-                .assignedDate(LocalDateTime.now())
+                .assignmentType(request.getAssignmentType() != null ? request.getAssignmentType() : AssignmentType.TEMPORARY)
                 .startDate(request.getStartDate())
                 .endDate(request.getEndDate())
-                .status(AssignmentStatus.ASSIGNED)
-                .assignmentType(request.getAssignmentType())
-                .shiftStartTime(request.getShiftStartTime())
-                .shiftEndTime(request.getShiftEndTime())
+                .status(AssignmentStatus.ACTIVE)
                 .notes(request.getNotes())
-                .restrictions(request.getRestrictions())
+                .assignedBy(assignedBy)
                 .createdBy(assignedBy)
                 .updatedBy(assignedBy)
                 .build();
 
-        assignment = assignmentRepository.save(assignment);
+        VehicleAssignment savedAssignment = assignmentRepository.save(assignment);
+        logger.info("Vehicle assignment created successfully with ID: {}", savedAssignment.getId());
 
-        // Update vehicle's current driver
-        vehicle.assignDriver(request.getDriverId());
-        vehicle.setUpdatedBy(assignedBy);
-        vehicleRepository.save(vehicle);
+        // 6. NOTIFY USER SERVICE ABOUT ASSIGNMENT
+        notifyDriverAssignment(request.getDriverId(), vehicle, assignment);
 
-        // Clear related caches
-        clearAssignmentCaches(companyId, request.getVehicleId(), request.getDriverId());
-
-        logger.info("Successfully assigned driver {} to vehicle {}", request.getDriverId(), request.getVehicleId());
-        return mapToVehicleAssignmentResponse(assignment);
+        return mapToResponse(savedAssignment);
     }
 
     /**
-     * Update vehicle assignment
+     * Validate driver availability with User Service
      */
-    public VehicleAssignmentResponse updateAssignment(UUID assignmentId, UpdateAssignmentRequest request,
-                                                      UUID companyId, UUID updatedBy) {
-        logger.info("Updating assignment: {} for company: {}", assignmentId, companyId);
+    private void validateDriverAvailability(UUID driverId, UUID companyId) {
+        try {
+            logger.debug("Validating driver availability: {} for company: {}", driverId, companyId);
 
-        VehicleAssignment assignment = assignmentRepository.findByIdAndCompanyId(assignmentId, companyId)
-                .orElseThrow(() -> new AssignmentNotFoundException("Assignment not found: " + assignmentId));
+            DriverValidationResponse validation = userServiceClient.validateDriver(driverId, companyId).getBody();
 
-        // Validate assignment update
-        if (request.getEndDate() != null) {
-            validateAssignmentDates(assignment.getStartDate(), request.getEndDate());
+            if (validation == null) {
+                throw new DriverNotAvailableException("Unable to validate driver availability");
+            }
+
+            if (!validation.isValid()) {
+                String errors = validation.getValidationErrors() != null ?
+                        String.join(", ", validation.getValidationErrors()) : "Driver validation failed";
+                throw new DriverNotAvailableException("Driver validation failed: " + errors);
+            }
+
+            if (!validation.isAvailable()) {
+                String reason = validation.getUnavailabilityReason() != null ?
+                        validation.getUnavailabilityReason() : "Driver is not available";
+                throw new DriverNotAvailableException("Driver not available: " + reason);
+            }
+
+            logger.info("Driver availability validated successfully: {}", driverId);
+
+        } catch (DriverNotAvailableException e) {
+            throw e; // Re-throw driver availability exceptions
+        } catch (Exception e) {
+            logger.error("Failed to validate driver availability for driver: {}", driverId, e);
+            throw new DriverNotAvailableException("Unable to validate driver availability: " + e.getMessage());
+        }
+    }
+
+    /**
+     * Validate vehicle availability for assignment
+     */
+    private void validateVehicleAvailability(UUID vehicleId, UUID companyId) {
+        // Check if vehicle exists and belongs to company
+        Vehicle vehicle = vehicleRepository.findByIdAndCompanyId(vehicleId, companyId)
+                .orElseThrow(() -> new VehicleNotFoundException("Vehicle not found: " + vehicleId));
+
+        // Check if vehicle is in assignable status
+        if (vehicle.getStatus() != com.fleetmanagement.vehicleservice.domain.enums.VehicleStatus.ACTIVE) {
+            throw new VehicleAssignmentConflictException("Vehicle is not available for assignment. Status: " + vehicle.getStatus());
         }
 
-        // Update fields
-        updateAssignmentFields(assignment, request, updatedBy);
-
-        assignment = assignmentRepository.save(assignment);
-
-        // Clear related caches
-        clearAssignmentCaches(companyId, assignment.getVehicle().getId(), assignment.getDriverId());
-
-        logger.info("Successfully updated assignment: {}", assignmentId);
-        return mapToVehicleAssignmentResponse(assignment);
+        logger.debug("Vehicle availability validated: {}", vehicleId);
     }
 
     /**
-     * Terminate assignment
+     * Check for assignment conflicts
      */
-    @CacheEvict(value = "assignments", key = "#assignmentId")
+    private void validateAssignmentConflicts(UUID driverId, UUID vehicleId, LocalDate startDate, LocalDate endDate) {
+        // Check for overlapping driver assignments
+        List<VehicleAssignment> driverConflicts = assignmentRepository.findOverlappingDriverAssignments(
+                driverId, startDate, endDate);
+
+        if (!driverConflicts.isEmpty()) {
+            throw new VehicleAssignmentConflictException(
+                    "Driver is already assigned to another vehicle during this period");
+        }
+
+        // Check for overlapping vehicle assignments
+        List<VehicleAssignment> vehicleConflicts = assignmentRepository.findOverlappingVehicleAssignments(
+                vehicleId, startDate, endDate);
+
+        if (!vehicleConflicts.isEmpty()) {
+            throw new VehicleAssignmentConflictException(
+                    "Vehicle is already assigned to another driver during this period");
+        }
+
+        logger.debug("No assignment conflicts found for driver: {} and vehicle: {}", driverId, vehicleId);
+    }
+
+    /**
+     * Notify User Service about driver assignment
+     */
+    private void notifyDriverAssignment(UUID driverId, Vehicle vehicle, VehicleAssignment assignment) {
+        try {
+            DriverAssignmentNotification notification = new DriverAssignmentNotification();
+            notification.setVehicleId(vehicle.getId());
+            notification.setVehicleName(vehicle.getName());
+            notification.setLicensePlate(vehicle.getLicensePlate());
+            notification.setCompanyId(vehicle.getCompanyId());
+            notification.setAssignmentStartDate(assignment.getStartDate());
+            notification.setAssignmentEndDate(assignment.getEndDate());
+            notification.setAssignmentType(assignment.getAssignmentType().name());
+            notification.setNotes(assignment.getNotes());
+
+            userServiceClient.notifyDriverAssignment(driverId, notification);
+            logger.info("Driver assignment notification sent successfully: {}", driverId);
+
+        } catch (Exception e) {
+            logger.error("Failed to notify driver assignment for driver: {}", driverId, e);
+            // Note: This doesn't fail the assignment creation, but should be monitored
+        }
+    }
+
+    /**
+     * Terminate assignment with notifications
+     */
+    @Transactional
+    @CacheEvict(value = {"assignments", "driverAssignments", "vehicleAssignments"}, allEntries = true)
     public VehicleAssignmentResponse terminateAssignment(UUID assignmentId, UUID companyId, UUID terminatedBy) {
         logger.info("Terminating assignment: {} for company: {}", assignmentId, companyId);
 
         VehicleAssignment assignment = assignmentRepository.findByIdAndCompanyId(assignmentId, companyId)
-                .orElseThrow(() -> new AssignmentNotFoundException("Assignment not found: " + assignmentId));
+                .orElseThrow(() -> new VehicleAssignmentConflictException("Assignment not found: " + assignmentId));
 
-        // Terminate the assignment
-        assignment.terminate();
+        if (assignment.getStatus() != AssignmentStatus.ACTIVE) {
+            throw new VehicleAssignmentConflictException("Assignment is not active: " + assignment.getStatus());
+        }
+
+        // Update assignment status
+        assignment.setStatus(AssignmentStatus.TERMINATED);
+        assignment.setEndDate(LocalDate.now());
         assignment.setUpdatedBy(terminatedBy);
+        assignment.setUpdatedAt(LocalDateTime.now());
 
-        assignment = assignmentRepository.save(assignment);
+        VehicleAssignment updatedAssignment = assignmentRepository.save(assignment);
 
-        // Update vehicle to remove driver assignment
-        Vehicle vehicle = assignment.getVehicle();
-        vehicle.unassignDriver();
-        vehicle.setUpdatedBy(terminatedBy);
-        vehicleRepository.save(vehicle);
-
-        // Clear related caches
-        clearAssignmentCaches(companyId, vehicle.getId(), assignment.getDriverId());
-
-        logger.info("Successfully terminated assignment: {}", assignmentId);
-        return mapToVehicleAssignmentResponse(assignment);
-    }
-
-    /**
-     * Check-in driver to vehicle
-     */
-    public CheckInOutResponse checkInDriver(VehicleCheckinRequest request, UUID companyId, UUID performedBy) {
-        logger.info("Processing check-in for assignment: {}", request.getAssignmentId());
-
-        VehicleAssignment assignment = assignmentRepository.findByIdAndCompanyId(request.getAssignmentId(), companyId)
-                .orElseThrow(() -> new AssignmentNotFoundException("Assignment not found: " + request.getAssignmentId()));
-
-        // Validate check-in
-        if (!assignment.isActive()) {
-            throw new AssignmentValidationException("Cannot check-in to inactive assignment");
+        // NOTIFY USER SERVICE ABOUT UNASSIGNMENT
+        try {
+            userServiceClient.notifyDriverUnassignment(assignment.getDriverId(), assignment.getVehicleId());
+            logger.info("Driver unassignment notification sent: {}", assignment.getDriverId());
+        } catch (Exception e) {
+            logger.error("Failed to notify driver unassignment: {}", assignment.getDriverId(), e);
         }
 
-        if (assignment.isCheckedIn()) {
-            throw new AssignmentValidationException("Driver is already checked in");
-        }
-
-        // Perform check-in
-        assignment.checkIn(request.getLatitude(), request.getLongitude());
-        assignment.setUpdatedBy(performedBy);
-
-        assignmentRepository.save(assignment);
-
-        // Clear related caches
-        clearAssignmentCaches(companyId, assignment.getVehicle().getId(), assignment.getDriverId());
-
-        logger.info("Successfully checked in driver for assignment: {}", request.getAssignmentId());
-
-        return CheckInOutResponse.builder()
-                .assignmentId(assignment.getId())
-                .vehicleId(assignment.getVehicle().getId())
-                .driverId(assignment.getDriverId())
-                .operationType("CHECK_IN")
-                .timestamp(assignment.getLastCheckinTime())
-                .latitude(request.getLatitude())
-                .longitude(request.getLongitude())
-                .success(true)
-                .message("Driver successfully checked in")
-                .build();
-    }
-
-    /**
-     * Check-out driver from vehicle
-     */
-    public CheckInOutResponse checkOutDriver(VehicleCheckoutRequest request, UUID companyId, UUID performedBy) {
-        logger.info("Processing check-out for assignment: {}", request.getAssignmentId());
-
-        VehicleAssignment assignment = assignmentRepository.findByIdAndCompanyId(request.getAssignmentId(), companyId)
-                .orElseThrow(() -> new AssignmentNotFoundException("Assignment not found: " + request.getAssignmentId()));
-
-        // Validate check-out
-        if (!assignment.isCheckedIn()) {
-            throw new AssignmentValidationException("Driver is not currently checked in");
-        }
-
-        // Update vehicle mileage if provided
-        if (request.getEndingMileage() != null) {
-            Vehicle vehicle = assignment.getVehicle();
-            if (request.getEndingMileage() >= vehicle.getCurrentMileage()) {
-                vehicle.setCurrentMileage(request.getEndingMileage());
-                vehicle.setUpdatedBy(performedBy);
-                vehicleRepository.save(vehicle);
-            }
-        }
-
-        // Perform check-out
-        assignment.checkOut();
-        assignment.setUpdatedBy(performedBy);
-
-        assignmentRepository.save(assignment);
-
-        // Clear related caches
-        clearAssignmentCaches(companyId, assignment.getVehicle().getId(), assignment.getDriverId());
-
-        logger.info("Successfully checked out driver for assignment: {}", request.getAssignmentId());
-
-        return CheckInOutResponse.builder()
-                .assignmentId(assignment.getId())
-                .vehicleId(assignment.getVehicle().getId())
-                .driverId(assignment.getDriverId())
-                .operationType("CHECK_OUT")
-                .timestamp(assignment.getLastCheckoutTime())
-                .success(true)
-                .message("Driver successfully checked out")
-                .build();
-    }
-
-    /**
-     * Get assignment by ID
-     */
-    @Cacheable(value = "assignments", key = "#assignmentId")
-    public VehicleAssignmentResponse getAssignmentById(UUID assignmentId, UUID companyId) {
-        logger.debug("Fetching assignment: {} for company: {}", assignmentId, companyId);
-
-        VehicleAssignment assignment = assignmentRepository.findByIdAndCompanyId(assignmentId, companyId)
-                .orElseThrow(() -> new AssignmentNotFoundException("Assignment not found: " + assignmentId));
-
-        return mapToVehicleAssignmentResponse(assignment);
-    }
-
-    /**
-     * Get assignments by company with pagination
-     */
-    public PagedResponse<VehicleAssignmentResponse> getAssignmentsByCompany(UUID companyId, Pageable pageable) {
-        logger.debug("Fetching assignments for company: {} with pagination", companyId);
-
-        Page<VehicleAssignment> assignmentPage = assignmentRepository.findByCompanyId(companyId, pageable);
-
-        List<VehicleAssignmentResponse> assignmentResponses = assignmentPage.getContent().stream()
-                .map(this::mapToVehicleAssignmentResponse)
-                .collect(Collectors.toList());
-
-        return PagedResponse.<VehicleAssignmentResponse>builder()
-                .content(assignmentResponses)
-                .page(assignmentPage.getNumber())
-                .size(assignmentPage.getSize())
-                .totalElements((int) assignmentPage.getTotalElements())
-                .totalPages(assignmentPage.getTotalPages())
-                .first(assignmentPage.isFirst())
-                .last(assignmentPage.isLast())
-                .empty(assignmentPage.isEmpty())
-                .build();
-    }
-
-    /**
-     * Search assignments with criteria
-     */
-    public PagedResponse<VehicleAssignmentResponse> searchAssignments(AssignmentSearchRequest searchRequest,
-                                                                      UUID companyId, Pageable pageable) {
-        logger.debug("Searching assignments for company: {} with criteria", companyId);
-
-        Specification<VehicleAssignment> spec = createAssignmentSpecification(searchRequest, companyId);
-        Page<VehicleAssignment> assignmentPage = assignmentRepository.findAll(spec, pageable);
-
-        List<VehicleAssignmentResponse> assignmentResponses = assignmentPage.getContent().stream()
-                .map(this::mapToVehicleAssignmentResponse)
-                .collect(Collectors.toList());
-
-        return PagedResponse.<VehicleAssignmentResponse>builder()
-                .content(assignmentResponses)
-                .page(assignmentPage.getNumber())
-                .size(assignmentPage.getSize())
-                .totalElements((int) assignmentPage.getTotalElements())
-                .totalPages(assignmentPage.getTotalPages())
-                .first(assignmentPage.isFirst())
-                .last(assignmentPage.isLast())
-                .empty(assignmentPage.isEmpty())
-                .build();
-    }
-
-    /**
-     * Get active assignments for a company
-     */
-    public List<VehicleAssignmentResponse> getActiveAssignments(UUID companyId) {
-        logger.debug("Fetching active assignments for company: {}", companyId);
-
-        List<VehicleAssignment> assignments = assignmentRepository.findByCompanyIdAndStatus(companyId, AssignmentStatus.ASSIGNED);
-
-        return assignments.stream()
-                .filter(VehicleAssignment::isActive)
-                .map(this::mapToVehicleAssignmentResponse)
-                .collect(Collectors.toList());
+        logger.info("Assignment terminated successfully: {}", assignmentId);
+        return mapToResponse(updatedAssignment);
     }
 
     /**
      * Get assignments for a specific driver
      */
-    @Cacheable(value = "driver-assignments", key = "#driverId")
+    @Transactional(readOnly = true)
+    @Cacheable(value = "driverAssignments", key = "#driverId + '_' + #companyId")
     public List<VehicleAssignmentResponse> getDriverAssignments(UUID driverId, UUID companyId) {
-        logger.debug("Fetching assignments for driver: {} in company: {}", driverId, companyId);
+        logger.debug("Retrieving assignments for driver: {} in company: {}", driverId, companyId);
 
-        List<VehicleAssignment> assignments = assignmentRepository.findByDriverIdAndCompanyId(driverId, companyId);
+        List<VehicleAssignment> assignments = assignmentRepository.findByDriverIdAndCompanyIdOrderByStartDateDesc(
+                driverId, companyId);
 
         return assignments.stream()
-                .map(this::mapToVehicleAssignmentResponse)
-                .collect(Collectors.toList());
+                .map(this::mapToResponse)
+                .toList();
     }
 
     /**
      * Get assignments for a specific vehicle
      */
+    @Transactional(readOnly = true)
+    @Cacheable(value = "vehicleAssignments", key = "#vehicleId + '_' + #companyId")
     public List<VehicleAssignmentResponse> getVehicleAssignments(UUID vehicleId, UUID companyId) {
-        logger.debug("Fetching assignments for vehicle: {} in company: {}", vehicleId, companyId);
+        logger.debug("Retrieving assignments for vehicle: {} in company: {}", vehicleId, companyId);
 
-        List<VehicleAssignment> assignments = assignmentRepository.findByVehicleIdAndCompanyId(vehicleId, companyId);
+        List<VehicleAssignment> assignments = assignmentRepository.findByVehicleIdAndCompanyIdOrderByStartDateDesc(
+                vehicleId, companyId);
 
         return assignments.stream()
-                .map(this::mapToVehicleAssignmentResponse)
-                .collect(Collectors.toList());
+                .map(this::mapToResponse)
+                .toList();
     }
 
     /**
-     * Get currently checked-in assignments
+     * Get currently active assignments
      */
-    public List<VehicleAssignmentResponse> getCurrentlyCheckedInAssignments(UUID companyId) {
-        logger.debug("Fetching currently checked-in assignments for company: {}", companyId);
+    @Transactional(readOnly = true)
+    public List<VehicleAssignmentResponse> getActiveAssignments(UUID companyId) {
+        logger.debug("Retrieving active assignments for company: {}", companyId);
 
-        List<VehicleAssignment> assignments = assignmentRepository.findCurrentlyCheckedInAssignments(companyId);
+        List<VehicleAssignment> assignments = assignmentRepository.findActiveAssignmentsByCompany(companyId);
 
         return assignments.stream()
-                .map(this::mapToVehicleAssignmentResponse)
-                .collect(Collectors.toList());
+                .map(this::mapToResponse)
+                .toList();
     }
 
     /**
-     * Get expiring assignments
+     * Check-in assignment
      */
-    public List<VehicleAssignmentResponse> getExpiringAssignments(UUID companyId, int daysThreshold) {
-        LocalDate endDate = LocalDate.now().plusDays(daysThreshold);
-        List<VehicleAssignment> assignments = assignmentRepository.findExpiringAssignments(companyId, endDate);
+    @Transactional
+    @CacheEvict(value = {"assignments", "driverAssignments", "vehicleAssignments"}, allEntries = true)
+    public VehicleAssignmentResponse checkInAssignment(UUID assignmentId, UUID companyId, UUID checkedInBy) {
+        logger.info("Checking in assignment: {} for company: {}", assignmentId, companyId);
 
-        return assignments.stream()
-                .map(this::mapToVehicleAssignmentResponse)
-                .collect(Collectors.toList());
-    }
+        VehicleAssignment assignment = assignmentRepository.findByIdAndCompanyId(assignmentId, companyId)
+                .orElseThrow(() -> new VehicleAssignmentConflictException("Assignment not found: " + assignmentId));
 
-    /**
-     * Validate assignment for conflicts
-     */
-    public AssignmentValidationResponse validateAssignment(AssignDriverRequest request, UUID companyId, UUID excludeAssignmentId) {
-        logger.debug("Validating assignment for vehicle: {} and driver: {}", request.getVehicleId(), request.getDriverId());
-
-        AssignmentValidationResponse.AssignmentValidationResponseBuilder responseBuilder =
-                AssignmentValidationResponse.builder()
-                        .isValid(true)
-                        .hasConflicts(false)
-                        .errors(new ArrayList<>())
-                        .warnings(new ArrayList<>())
-                        .conflicts(new ArrayList<>());
-
-        LocalDate endDate = request.getEndDate() != null ? request.getEndDate() : LocalDate.now().plusYears(10);
-
-        // Check for vehicle conflicts
-        boolean vehicleConflict = assignmentRepository.hasVehicleConflict(
-                request.getVehicleId(), companyId, request.getStartDate(), endDate, excludeAssignmentId);
-
-        if (vehicleConflict) {
-            List<VehicleAssignment> conflictingAssignments = assignmentRepository.findConflictingVehicleAssignments(
-                    request.getVehicleId(), companyId, request.getStartDate(), endDate, excludeAssignmentId);
-
-            for (VehicleAssignment conflict : conflictingAssignments) {
-                AssignmentValidationResponse.ConflictInfo conflictInfo = AssignmentValidationResponse.ConflictInfo.builder()
-                        .conflictType("VEHICLE_CONFLICT")
-                        .conflictingAssignmentId(conflict.getId())
-                        .conflictStartDate(conflict.getStartDate())
-                        .conflictEndDate(conflict.getEndDate())
-                        .description("Vehicle is already assigned to another driver during this period")
-                        .build();
-                responseBuilder.addConflict(conflictInfo);
-            }
+        if (assignment.getStatus() != AssignmentStatus.ACTIVE) {
+            throw new VehicleAssignmentConflictException("Assignment is not active for check-in");
         }
 
-        // Check for driver conflicts
-        boolean driverConflict = assignmentRepository.hasDriverConflict(
-                request.getDriverId(), companyId, request.getStartDate(), endDate, excludeAssignmentId);
+        assignment.setStatus(AssignmentStatus.CHECKED_IN);
+        assignment.setCheckInTime(LocalDateTime.now());
+        assignment.setUpdatedBy(checkedInBy);
+        assignment.setUpdatedAt(LocalDateTime.now());
 
-        if (driverConflict) {
-            List<VehicleAssignment> conflictingAssignments = assignmentRepository.findConflictingDriverAssignments(
-                    request.getDriverId(), companyId, request.getStartDate(), endDate, excludeAssignmentId);
+        VehicleAssignment updatedAssignment = assignmentRepository.save(assignment);
+        logger.info("Assignment checked in successfully: {}", assignmentId);
 
-            for (VehicleAssignment conflict : conflictingAssignments) {
-                AssignmentValidationResponse.ConflictInfo conflictInfo = AssignmentValidationResponse.ConflictInfo.builder()
-                        .conflictType("DRIVER_CONFLICT")
-                        .conflictingAssignmentId(conflict.getId())
-                        .conflictStartDate(conflict.getStartDate())
-                        .conflictEndDate(conflict.getEndDate())
-                        .description("Driver is already assigned to another vehicle during this period")
-                        .build();
-                responseBuilder.addConflict(conflictInfo);
-            }
-        }
-
-        return responseBuilder.build();
+        return mapToResponse(updatedAssignment);
     }
 
-    // Private helper methods
+    /**
+     * Check-out assignment
+     */
+    @Transactional
+    @CacheEvict(value = {"assignments", "driverAssignments", "vehicleAssignments"}, allEntries = true)
+    public VehicleAssignmentResponse checkOutAssignment(UUID assignmentId, UUID companyId, UUID checkedOutBy) {
+        logger.info("Checking out assignment: {} for company: {}", assignmentId, companyId);
 
-//    private void validateDriver(UUID driverId, UUID companyId) {
-//        // This would call the User Service to validate the driver exists and is active
-//        // For now, we'll implement a placeholder
-//        try {
-//            // userServiceClient.validateDriver(driverId, companyId);
-//            logger.debug("Driver validation placeholder for driver: {}", driverId);
-//        } catch (Exception e) {
-//            throw new DriverValidationException("Driver
+        VehicleAssignment assignment = assignmentRepository.findByIdAndCompanyId(assignmentId, companyId)
+                .orElseThrow(() -> new VehicleAssignmentConflictException("Assignment not found: " + assignmentId));
+
+        if (assignment.getStatus() != AssignmentStatus.CHECKED_IN) {
+            throw new VehicleAssignmentConflictException("Assignment is not checked in for check-out");
+        }
+
+        assignment.setStatus(AssignmentStatus.CHECKED_OUT);
+        assignment.setCheckOutTime(LocalDateTime.now());
+        assignment.setUpdatedBy(checkedOutBy);
+        assignment.setUpdatedAt(LocalDateTime.now());
+
+        VehicleAssignment updatedAssignment = assignmentRepository.save(assignment);
+        logger.info("Assignment checked out successfully: {}", assignmentId);
+
+        return mapToResponse(updatedAssignment);
+    }
+
+    /**
+     * Map entity to response DTO
+     */
+    private VehicleAssignmentResponse mapToResponse(VehicleAssignment assignment) {
+        return VehicleAssignmentResponse.builder()
+                .id(assignment.getId())
+                .vehicleId(assignment.getVehicleId())
+                .driverId(assignment.getDriverId())
+                .companyId(assignment.getCompanyId())
+                .assignmentType(assignment.getAssignmentType())
+                .status(assignment.getStatus())
+                .startDate(assignment.getStartDate())
+                .endDate(assignment.getEndDate())
+                .checkInTime(assignment.getCheckInTime())
+                .checkOutTime(assignment.getCheckOutTime())
+                .notes(assignment.getNotes())
+                .assignedBy(assignment.getAssignedBy())
+                .createdAt(assignment.getCreatedAt())
+                .updatedAt(assignment.getUpdatedAt())
+                .build();
+    }
+}
